fix: Update project descriptions to use "entries" instead of "tracks" for consistency

--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
                     </div>
                     <h3>Bungaku</h3>
                     <p class="project-subtitle">Billboard Music Analysis Platform</p>
-                    <p class="project-description">Statistical analysis of 130K+ Billboard tracks using ANOVA, Tukey HSD, and t-tests to discover seasonal patterns and decade-based shifts in music trends.</p>
+                    <p class="project-description">Statistical analysis of 130K+ Billboard entries using ANOVA, Tukey HSD, and t-tests to discover seasonal patterns and decade-based shifts in music trends.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">SciPy</span>
@@ -102,7 +102,7 @@
                         <span class="tech-tag">Statistical Testing</span>
                     </div>
                     <div class="project-metrics">
-                        <span class="metric">130K+ tracks</span>
+                        <span class="metric">130K+ entries</span>
                         <span class="metric">4 statistical tests</span>
                         <span class="metric">95% accuracy</span>
                     </div>
