--- a/projects/bungaku.html
+++ b/projects/bungaku.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bungaku - Billboard Music Analysis | Adetunji Fasiku</title>
-    <meta name="description" content="Statistical analysis of 130K+ Billboard tracks using ANOVA, Tukey HSD, and t-tests. Discover seasonal patterns and decade-based shifts in music trends with 95% accuracy.">
+    <meta name="description" content="Statistical analysis of 130K+ Billboard entries using ANOVA, Tukey HSD, and t-tests. Discover seasonal patterns and decade-based shifts in music trends with 95% accuracy.">
     <link rel="stylesheet" href="../styles.css">
     <script src="../theme-utils.js"></script>
 </head>
@@ -37,7 +37,7 @@
             <div class="project-icon">文学</div>
             <h1>Bungaku</h1>
             <p class="subtitle">Billboard Music Analysis Platform - Active Development</p>
-            <p>Statistical analysis of 130K+ Billboard tracks using ANOVA, Tukey HSD, and t-tests to discover seasonal patterns and decade-based shifts in music trends. Currently expanding analysis and adding new features.</p>
+            <p>Statistical analysis of 130K+ Billboard entries using ANOVA, Tukey HSD, and t-tests to discover seasonal patterns and decade-based shifts in music trends. Currently expanding analysis and adding new features.</p>
             
             <div class="project-links">
                 <a href="https://github.com/Tunchiie/bungaku" class="project-link" target="_blank" rel="noopener noreferrer">
@@ -55,7 +55,7 @@
             <div class="project-highlights">
                 <h4>Technical Achievements & Business Impact</h4>
                 <ul class="highlight-list">
-                    <li>Analyzed 130K+ Billboard tracks spanning multiple decades to identify seasonal music trends and decade-based shifts</li>
+                    <li>Analyzed 130K+ Billboard entries spanning multiple decades to identify seasonal music trends and decade-based shifts</li>
                     <li>Implemented 4 statistical tests including ANOVA, Tukey HSD, and t-tests for robust pattern validation</li>
                     <li>Achieved 95% accuracy in predicting seasonal music preferences using statistical modeling</li>
                     <li>Discovered significant correlations between song characteristics and chart performance across different time periods</li>
@@ -125,7 +125,7 @@
             <div class="github-stats">
                 <div class="github-stat-card">
                     <span class="github-stat-number">130K+</span>
-                    <span class="github-stat-label">Billboard Tracks</span>
+                    <span class="github-stat-label">Billboard entries</span>
                 </div>
                 <div class="github-stat-card">
                     <span class="github-stat-number">13</span>
