--- a/resume-generator.html
+++ b/resume-generator.html
@@ -920,22 +920,22 @@
                     technical: [
                         '• Built SQL queries, Python models, Tableau dashboards for supply chain, HR, finance',
                         '• Applied statistical testing and visual storytelling for actionable business insights',
-                        '• Final project: Analyzed 130K+ Billboard tracks to identify hit song patterns'
+                        '• Final project: Analyzed 130K+ Billboard entries to identify hit song patterns'
                     ],
                     leadership: [
-                        '• Completed capstone project analyzing 130K+ Billboard tracks for music industry insights',
+                        '• Completed capstone project analyzing 130K+ Billboard entries for music industry insights',
                         '• Collaborated across multiple business domains (supply chain, HR, finance) to deliver solutions',
                         '• Presented analytical findings to stakeholders using clear data visualization and storytelling'
                     ],
                     business: [
                         '• Delivered actionable business insights across supply chain, HR, and finance domains',
                         '• Applied statistical testing to identify patterns that drive business decision-making',
-                        '• Final project: Analyzed 130K+ Billboard tracks to identify hit song patterns'
+                        '• Final project: Analyzed 130K+ Billboard entries to identify hit song patterns'
                     ],
                     balanced: [
                         '• Built SQL queries, Python models, Tableau dashboards for supply chain, HR, finance',
                         '• Applied statistical testing and visual storytelling for actionable business insights',
-                        '• Final project: Analyzed 130K+ Billboard tracks to identify hit song patterns'
+                        '• Final project: Analyzed 130K+ Billboard entries to identify hit song patterns'
                     ]
                 },
                 amazon: {
@@ -1043,7 +1043,7 @@
                     '• Built ML models with 95%+ accuracy',
                     '• ML explainability expert (SHAP) for decisions',
                     '• Processed 50M+ data points across domains',
-                    '• Research: 130K+ Billboard tracks analysis'
+                    '• Research: 130K+ Billboard charting tracks analysis'
                 ],
                 'business-analyst': [
                     '• 20% productivity improvement through analysis',
@@ -1073,7 +1073,7 @@
                 'bungaku': {
                     name: 'Bungaku - Billboard Music Analysis',
                     date: 'Jun 2025',
-                    desc: 'Analyzed 130K+ Billboard tracks using ANOVA, Tukey HSD, t-tests. Discovered seasonal patterns and decade-based shifts.',
+                    desc: 'Analyzed 130K+ Billboard entries using ANOVA, Tukey HSD, t-tests. Discovered seasonal patterns and decade-based shifts.',
                     tech: 'Python, SciPy, Seaborn, Statistical Testing',
                     relevance: {
                         'data-analyst': 10,
@@ -1136,7 +1136,7 @@
                 if (emphasis === 'technical') {
                     // Emphasize technical aspects
                     if (project.name.includes('Bungaku')) {
-                        adaptedDesc = 'Analyzed 130K+ Billboard tracks using ANOVA, Tukey HSD, t-tests. Discovered seasonal patterns and decade-based shifts.';
+                        adaptedDesc = 'Analyzed 130K+ Billboard entries using ANOVA, Tukey HSD, t-tests. Discovered seasonal patterns and decade-based shifts.';
                     } else if (project.name.includes('CandleThrob')) {
                         adaptedDesc = 'Built interactive stock analysis dashboard with real-time data, candlestick charts, RSI, MACD indicators.';
                     } else if (project.name.includes('Customer')) {
@@ -1147,7 +1147,7 @@
                 } else if (emphasis === 'business') {
                     // Emphasize business impact
                     if (project.name.includes('Bungaku')) {
-                        adaptedDesc = 'Delivered actionable insights for music industry from 130K+ tracks. Identified market patterns and seasonal trends for strategic decision-making.';
+                        adaptedDesc = 'Delivered actionable insights for music industry from 130K+ entries. Identified market patterns and seasonal trends for strategic decision-making.';
                     } else if (project.name.includes('CandleThrob')) {
                         adaptedDesc = 'Built comprehensive financial analytics platform for real-time market analysis and investment decision support.';
                     } else if (project.name.includes('Customer')) {
@@ -1158,7 +1158,7 @@
                 } else if (emphasis === 'leadership') {
                     // Emphasize initiative and project management skills
                     if (project.name.includes('Bungaku')) {
-                        adaptedDesc = 'Capstone project analyzing 130K+ Billboard tracks. End-to-end research identifying seasonal patterns and decade-based shifts.';
+                        adaptedDesc = 'Capstone project analyzing 130K+ Billboard entries. End-to-end research identifying seasonal patterns and decade-based shifts.';
                     } else if (project.name.includes('CandleThrob')) {
                         adaptedDesc = 'Financial data platform project. Architected and developed comprehensive market analysis solution from concept to deployment.';
                     } else if (project.name.includes('Customer')) {
