--- a/resume.html
+++ b/resume.html
@@ -371,7 +371,7 @@
                     <div class="item-description">
                         • Built analytics solutions for supply chain, HR, and finance teams - processing 180K+ records and turning data chaos into clear dashboards<br>
                         • Applied statistical testing (ANOVA, hypothesis testing) to identify patterns relevant to business decisions<br>
-                        • Examined over 130,000 Billboard tracks to uncover hit song patterns, significantly enhancing insights into successful music trends.<br>
+                        • Examined over 130,000 Billboard entries to uncover hit song patterns, significantly enhancing insights into successful music trends.<br>
                         • Solved real problems across automotive, education, and entertainment - because good data skills work everywhere
                     </div>
                 </div>
@@ -685,7 +685,7 @@
             const exp1Bullets = [
                 '• Built SQL queries, Python models, Tableau dashboards for supply chain, HR, finance',
                 '• Applied statistical testing and visual storytelling for actionable business insights',
-                '• Examined over 130,000 Billboard tracks to uncover hit song patterns, significantly enhancing insights into successful music trends.'
+                '• Examined over 130,000 Billboard entries to uncover hit song patterns, significantly enhancing insights into successful music trends.'
             ];
             
             exp1Bullets.forEach(bullet => {
@@ -741,7 +741,7 @@
                 {
                     name: 'Bungaku - Billboard Music Analysis',
                     date: 'Jun 2025',
-                    desc: 'Analyzed 130K+ Billboard tracks using ANOVA, Tukey HSD, t-tests. Discovered seasonal patterns and decade-based shifts.',
+                    desc: 'Analyzed 130K+ Billboard entries using ANOVA, Tukey HSD, t-tests. Discovered seasonal patterns and decade-based shifts.',
                     tech: 'Python, SciPy, Seaborn, Statistical Testing'
                 },
                 {
