fix: Update project descriptions to use "entries" instead of "tracks" for consistency

--- a/resume/index.html
+++ b/resume/index.html
@@ -414,7 +414,7 @@
                     <div class="item-description">
                         • Built SQL queries, Python models, and Tableau/Looker dashboards to solve problems in supply chain, HR, and finance domains using real-world datasets<br>
                         • Used statistical testing and visual storytelling to deliver actionable insights in capstone projects<br>
-                        • Final project (Bungaku): identified audio traits in hit songs using statistical analysis of 130K+ tracks
+                        • Final project (Bungaku): identified audio traits in hit songs using statistical analysis of 130K+ chart entries
                     </div>
                 </div>
 
@@ -625,7 +625,7 @@
             const projects = [
                 {
                     name: 'Bungaku - Hit Song Pattern Analyzer',
-                    desc: 'Analyzed 130K+ Billboard tracks using ANOVA, Tukey HSD, t-tests to discover seasonal patterns in chart success',
+                    desc: 'Analyzed 130K+ Billboard entries using ANOVA, Tukey HSD, t-tests to discover seasonal patterns in chart success',
                     tech: 'Python, SciPy, Seaborn, Statistical Testing'
                 },
                 {
