--- a/projects/index.html
+++ b/projects/index.html
@@ -1039,7 +1039,7 @@
                 <div class="project-card" data-category="all analysis machine-learning data-science">
                     <div class="project-category-badge">Statistical Analysis</div>
                     <h3>Bungaku – Hit Song Pattern Analyzer</h3>
-                    <p>Analyzed 130K+ Billboard tracks with ANOVA, Tukey HSD, and t-tests. Discovered seasonal patterns in chart success and built visualizations for music industry insights. Addressing genre classification accuracy challenges for improved cross-domain analysis.</p>
+                    <p>Analyzed 130K+ Billboard entries with ANOVA, Tukey HSD, and t-tests. Discovered seasonal patterns in chart success and built visualizations for music industry insights. Addressing genre classification accuracy challenges for improved cross-domain analysis.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">ANOVA</span>
